--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="https://i.stack.imgur.com/22WR2.png" type="image/png" />
   <link rel="stylesheet" href="./style.css" />
+  <link href="/your-path-to-fontawesome/css/fontawesome.css" rel="stylesheet">
   <title>Google</title>
 </head>
 <body>
@@ -72,7 +73,19 @@
           </div>
         </div>
         <div id="auto-complete-container">
-          <ul id="auto-complete-results"></ul>
+          <div class="top-container">
+            <div class="backward-container">
+              <svg class="backward-icon" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"></path></svg>
+            </div>
+            <div class="input-container">
+              <input type="text" class="iphone-search-input">
+            </div>
+          </div>
+          <div class="bottom-container">
+            <ul class="history-list">
+              <li class="history-list-item"><div class="list-icon">Test</div></li>
+            </ul>
+          </div>
         </div>
           <div id="submit-buttons">
             <button class="button">Google Search</button>
