Added some icons and styled auto-complete section in order to look like google's autocomplete for iphone x

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="https://i.stack.imgur.com/22WR2.png" type="image/png" />
   <link rel="stylesheet" href="./style.css" />
-  <link href="/your-path-to-fontawesome/css/fontawesome.css" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/10a4f8f358.js" crossorigin="anonymous"></script>
   <title>Google</title>
 </head>
 <body>
@@ -83,7 +83,16 @@
           </div>
           <div class="bottom-container">
             <ul class="history-list">
-              <li class="history-list-item"><div class="list-icon">Test</div></li>
+              <li class="history-list-item"><div class="list-icon"><i class="far fa-clock"></i></div><span class="history-list-item-content"><b>responsive google clone</b></span><div class="remove">×</div></li>
+              <li class="history-list-item"><div class="list-icon"><i class="far fa-clock"></i></div><span class="history-list-item-content"><b>font awesome</b></span><div class="remove">×</div></li>
+              <li class="history-list-item"><div class="list-icon"><i class="far fa-clock"></i></div><span class="history-list-item-content"><b>font awesome</b></span><div class="remove">×</div></li>
+              <li class="history-list-item"><div class="list-icon"><i class="far fa-clock"></i></div><span class="history-list-item-content"><b>font awesome</b></span><div class="remove">×</div></li>
+              <li class="history-list-item"><div class="list-icon"><i class="far fa-clock"></i></div><span class="history-list-item-content"><b>font awesome</b></span><div class="remove">×</div></li>
+              <li class="history-list-item"><div class="list-icon"><i class="far fa-clock"></i></div><span class="history-list-item-content"><b>responsive google clone</b></span><div class="remove">×</div></li>
+              <li class="history-list-item"><div class="list-icon"><i class="far fa-clock"></i></div><span class="history-list-item-content"><b>font awesome</b></span><div class="remove">×</div></li>
+              <li class="history-list-item"><div class="list-icon"><i class="far fa-clock"></i></div><span class="history-list-item-content"><b>font awesome</b></span><div class="remove">×</div></li>
+              <li class="history-list-item"><div class="list-icon"><i class="far fa-clock"></i></div><span class="history-list-item-content"><b>font awesome</b></span><div class="remove">×</div></li>
+              <li class="history-list-item"><div class="list-icon"><i class="far fa-clock"></i></div><span class="history-list-item-content"><b>font awesome</b></span><div class="remove">×</div></li>
             </ul>
           </div>
         </div>
