completed design of auto-complete section for desktop and iphone-x as well

--- a/index.html
+++ b/index.html
@@ -83,19 +83,35 @@
           </div>
           <div class="bottom-container">
             <ul class="history-list">
-              <li class="history-list-item"><div class="list-icon"><i class="far fa-clock"></i></div><span class="history-list-item-content"><b>responsive google clone</b></span><div class="remove">×</div></li>
-              <li class="history-list-item"><div class="list-icon"><i class="far fa-clock"></i></div><span class="history-list-item-content"><b>font awesome</b></span><div class="remove">×</div></li>
-              <li class="history-list-item"><div class="list-icon"><i class="far fa-clock"></i></div><span class="history-list-item-content"><b>font awesome</b></span><div class="remove">×</div></li>
-              <li class="history-list-item"><div class="list-icon"><i class="far fa-clock"></i></div><span class="history-list-item-content"><b>font awesome</b></span><div class="remove">×</div></li>
-              <li class="history-list-item"><div class="list-icon"><i class="far fa-clock"></i></div><span class="history-list-item-content"><b>font awesome</b></span><div class="remove">×</div></li>
-              <li class="history-list-item"><div class="list-icon"><i class="far fa-clock"></i></div><span class="history-list-item-content"><b>responsive google clone</b></span><div class="remove">×</div></li>
-              <li class="history-list-item"><div class="list-icon"><i class="far fa-clock"></i></div><span class="history-list-item-content"><b>font awesome</b></span><div class="remove">×</div></li>
-              <li class="history-list-item"><div class="list-icon"><i class="far fa-clock"></i></div><span class="history-list-item-content"><b>font awesome</b></span><div class="remove">×</div></li>
-              <li class="history-list-item"><div class="list-icon"><i class="far fa-clock"></i></div><span class="history-list-item-content"><b>font awesome</b></span><div class="remove">×</div></li>
-              <li class="history-list-item"><div class="list-icon"><i class="far fa-clock"></i></div><span class="history-list-item-content"><b>font awesome</b></span><div class="remove">×</div></li>
+              <li class="history-list-item"><div class="list-icon"><i class="far fa-clock"></i></div><span class="history-list-item-content"><b>responsive google clone</b></span><div class="remove">×</div><div class="remove-text">Remove</div></li>
+              <li class="history-list-item"><div class="list-icon"><i class="far fa-clock"></i></div><span class="history-list-item-content"><b>font awesome</b></span><div class="remove">×</div><div class="remove-text">Remove</div></li>
+              <li class="history-list-item"><div class="list-icon"><i class="far fa-clock"></i></div><span class="history-list-item-content"><b>font awesome</b></span><div class="remove">×</div><div class="remove-text">Remove</div></li>
+              <li class="history-list-item"><div class="list-icon"><i class="far fa-clock"></i></div><span class="history-list-item-content"><b>font awesome</b></span><div class="remove">×</div><div class="remove-text">Remove</div></li>
+              <li class="history-list-item"><div class="list-icon"><i class="far fa-clock"></i></div><span class="history-list-item-content"><b>font awesome</b></span><div class="remove">×</div><div class="remove-text">Remove</div></li>
+              <li class="history-list-item"><div class="list-icon"><i class="far fa-clock"></i></div><span class="history-list-item-content"><b>responsive google clone</b></span><div class="remove">×</div><div class="remove-text">Remove</div></li>
+
             </ul>
           </div>
+          <div id="submit-buttons">
+            <button class="button">Google Search</button>
+            <button class="button" id="animated-button-2">
+              <ul>
+                <li>I'm Feeling Lucky</li>
+                <li>I'm Feeling Stellar</li>
+                <li>I'm Feeling Artistic</li>
+                <li>I'm Feeling Wonderful</li>
+                <li>I'm Feeling Curious</li>
+                <li>I'm Feeling Hungry</li>
+                <li>I'm Feeling Doodley</li>
+                <li>I'm Feeling Generous</li>
+                <li>I'm Feeling Trendy</li>
+                <li>I'm Feeling Puzzled</li>
+                <li>I'm Feeling Playful</li>
+              </ul>
+            </button>
+          </div>
         </div>
+        <div id="under-auto-complete">
           <div id="submit-buttons">
             <button class="button">Google Search</button>
             <button class="button" id="animated-button">
@@ -118,7 +134,7 @@
             Google offered in:
             <a href="">Shqip</a>
           </div>
-
+        </div>
       </form>
     </div>
   </div>
