Added logic to autocomplete for desktop and iphone.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
   </div>
   <div id="middle">
-    <div id="desktop-backward" class="logo-container">
+    <div class="logo-container">
       <div id="logo">
         <img src="./images/google.png" alt="google image" id="google-logo" />
       </div>
@@ -71,6 +71,7 @@
           <img class="icons" id="mic-img" src="./images/mic.png" alt="" />
         </div>
       </div>
+      <div id="desktop-backward"></div>
       <div id="auto-complete-container">
         <div class="top-container">
           <div class="backward-container">
