Modified changing id of elements into changing class of thems

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </div>
     </div>
     <form autocomplete="off" action="" id="search-form">
-      <div id="search-bar-container">
+      <div class="search-bar-container">
         <div id="search-icon">
           <img class="icons" id="search-img" src="https://www.trimandir.org/images/search-icon.png" alt="" />
         </div>
@@ -72,7 +72,7 @@
         </div>
       </div>
       <div id="desktop-backward"></div>
-      <div id="auto-complete-container">
+      <div class="auto-complete-container">
         <div class="top-container">
           <div class="backward-container">
             <svg id="iphone-backward" class="backward-icon" focusable="false" xmlns="http://www.w3.org/2000/svg"
